--- a/Doubts/Doubts.css
+++ b/Doubts/Doubts.css
@@ -6,3 +6,12 @@
     position: relative;
     border: 5px solid black;
 }
+
+#myDIV {
+    height: 250px;
+    width: 400px;
+    padding: 10px;
+    margin: 15px;
+    border: 5px solid red;
+    background-color: lightblue;
+}
